# withings_data_collector

./: .gitignore  README.md  main.py  measurements.json  pyproject.toml  withings_config.toml
src/withings_data_collector/: get_auth_code.py  get_data.py  measures.py  streamlit_app.py
